silence depreciation notice

--- a/code-oss/User/settings.json
+++ b/code-oss/User/settings.json
@@ -1,4 +1,5 @@
 {
+	"bracketPairColorizer.depreciation-notice": false,
 	"security.workspace.trust.untrustedFiles": "open",
 	"telemetry.telemetryLevel": "off",
 	"files.autoSave": "off",
