--- a/code-oss/User/settings.json
+++ b/code-oss/User/settings.json
@@ -9,7 +9,6 @@
 
 	"window.newWindowDimensions": "inherit",
 	"window.titleBarStyle": "custom",
-	"window.zoomLevel": 1,
 
 	"workbench.activityBar.visible": false,
 	"workbench.iconTheme": "icyicons",
@@ -44,12 +43,16 @@
 	"workbench.editorAssociations": {
 		"*.ipynb": "jupyter.notebook.ipynb"
 	},
+	"debug.javascript.defaultRuntimeExecutable": {
+		"pwa-node": "~/.local/share/nvm/versions/node/v16.14.0/bin/node"
+	},
 
 	"explorer.compactFolders": false,
 
 	"editor.fontFamily": "JetBrains Mono",
 	"editor.fontSize": 18,
-	"editor.fontLigatures": true,
+	"window.zoomLevel": 1,
+	"editor.fontLigatures": false,
 	"editor.wordWrap": "on",
 	"editor.formatOnSave": true,
 	"editor.formatOnPaste": true,
@@ -96,7 +99,11 @@
 	"[javascript]": {
 		"editor.defaultFormatter": "esbenp.prettier-vscode"
 	},
-	"editor.quickSuggestions": true,
+	"editor.quickSuggestions": {
+		"comments": "on",
+		"strings": "on",
+		"other": "on"
+	},
 	"[json]": {
 		"editor.defaultFormatter": "esbenp.prettier-vscode"
 	},
@@ -107,7 +114,11 @@
 		"editor.defaultFormatter": "PrateekMahendrakar.prettyxml"
 	},
 	"[plaintext]": {
-		"editor.quickSuggestions": false
+		"editor.quickSuggestions": {
+			"comments": "off",
+			"strings": "off",
+			"other": "off"
+		}
 	},
 
 	"prettier.useTabs": true,
@@ -137,5 +148,16 @@
 	"python.defaultInterpreterPath": "~/.local/share/miniconda3/envs/vscode/bin/python3",
 	"python.formatting.provider": "autopep8",
 	"python.formatting.autopep8Path": "~/.local/share/miniconda3/envs/vscode/bin/autopep8",
-	"python.languageServer": "Jedi"
+	"python.languageServer": "Jedi",
+	"markdown.preview.fontSize": 18,
+	"[typescript]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"[scss]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"[css]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"terminal.integrated.inheritEnv": false
 }
